fix paper-paf z-index:wq

--- a/styles/main.css
+++ b/styles/main.css
@@ -34,7 +34,7 @@ main-element {
 
 paper-fab {
   position: fixed;
-  z-index: 4;
+  z-index: 110;
   bottom: 35px;
   right: 35px;
 }
